--- a/pattern_generation/randomness.ipynb
+++ b/pattern_generation/randomness.ipynb
@@ -19,7 +19,16 @@
     "starts at an offset in next row e.g. `n1n11nnnn`\n",
     "how to make purely random/high entropy matrix with 1s and 0s?\n",
     "\n",
-    "How to make pictures with tesselations that aren't just diagonal? what about scale free distributions? "
+    "How to make pictures with tesselations that aren't just diagonal? what about scale free distributions? \n",
+    "\n",
+    "*What is the general theory behind creating a function/dynamical system that given a random matrix input, outputs a lower entropy, but same size (in dimensions) image?*\n",
+    "approaches:\n",
+    "- shuffling the matrix: what do trajectories look like in 3d space?\n",
+    "- applying function to each pixel in matrix\n",
+    "- difference between the above two\n",
+    "\n",
+    "# todo\n",
+    "- use entropy formula"
    ]
   },
   {
@@ -34,6 +43,24 @@
     "'11000111100010010101111110000001011010010101001010101111010101010101011001111111111' size 1k, figsize large\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-12-04T05:58:55.613495Z",
+     "iopub.status.busy": "2021-12-04T05:58:55.612739Z",
+     "iopub.status.idle": "2021-12-04T05:58:57.324645Z",
+     "shell.execute_reply": "2021-12-04T05:58:57.322911Z",
+     "shell.execute_reply.started": "2021-12-04T05:58:55.613439Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -63,9 +90,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from itertools import combinations\n",
+    "from itertools import \n",
     "rmat = np.random.random(size=(200,200))\n",
     "# cpg = list(combinations(range(19), 2)) #central pattern generator\n",
     "def rotate(s,direction):\n",
@@ -164,6 +189,38 @@
     "w,v = np.linalg.eig(rmat)\n",
     "reals, ims = [i.real for i in w], [i.imag for i in w]\n",
     "plt.scatter(reals, ims, alpha=0.7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coarse graining\n",
+    "\n",
+    "algorithm: start with random matrix, then coarse grain over increasingly sized grids and compare eigenvalue decomposition (also of covariance matrix)\n",
+    "- compare majority, average, decimation, and finally random sample rule\n",
+    "- do this on images for fun too\n",
+    "    - tangential shuffle images and try to reshuffle back to original with algorithmic compression\n",
+    "\n",
+    "use entropy formula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmat = np.random.random(size=(500,500))\n",
+    "\n",
+    "def coarse_grain(mat, method='avg', sizes=None):\n",
+    "    \"\"\"\n",
+    "    mat: 2d *square* matrix (for now)\n",
+    "    method: avg, vote, or decimation\n",
+    "    sizes: tbd\n",
+    "    \"\"\"\n",
+    "    w = len(mat)\n",
+    "    for res in  "
    ]
   },
   {
