base n dimensionality power plots

--- a/pattern_generation/interference_pattern.ipynb
+++ b/pattern_generation/interference_pattern.ipynb
@@ -36,6 +36,8 @@
     "ising model on interference patterns?\n",
     "\n",
     "\n",
+    "## Black interference and implications for neural oscillations?\n",
+    "\n",
     "Resources\n",
     "- [maybe of interest](https://www.physicsclassroom.com/class/light/Lesson-3/The-Path-Difference)"
    ]
