--- a/graph/search_algo_matrices.ipynb
+++ b/graph/search_algo_matrices.ipynb
@@ -43,7 +43,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +59,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "505110584122c69bec0732f0d8c9b4034daf1873e3f99e0c4c0fb87fb7c3087a"
@@ -67,5 +66,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
